bookshop-deployment/kubernetes/applications/edge-service/production/patch-volumes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-service
spec:
  template:
    spec:
      containers:
        - name: edge-service
          volumeMounts:
            - name: redis-credentials-volume
              mountPath: /workspace/secrets/postgres
            - name: keycloak-client-credentials-volume
              mountPath: /workspace/secrets/keycloak-client
            - name: keycloak-issuer-client-secret-volume
              mountPath: /workspace/secrets/keycloak-issuer
      volumes:
        - name: redis-credentials-volume
          secret:
            secretName: bookshop-redis-credentials
        - name: keycloak-client-credentials-volume
          secret:
            secretName: bookshop-keycloak-client-credentials
        - name: keycloak-issuer-client-secret-volume
          secret:
            secretName: keycloak-issuer-client-secret
